# CPU-Emulator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cpu_emulator_docs.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  cpu-state.schema.json  trace-header.schema.json  trace-record.schema.json  validation-report.schema.json
docs/: output-formats.md
docs/adr/: 0001-cpu-core-decoupled-from-host-io.md  0002-historical-quirks-as-profiles.md  0003-hash-chained-traces.md  0004-strict-memory-addressing.md  README.md
src/chip8/: __init__.py  __main__.py  cfg.py  cli.py  constants.py  cpu.py  debug.py  disasm.py  display.py  errors.py  keyboard.py  machine.py  memory.py  opcode.py  quirks.py  runner.py  timers.py  trace.py
tests/conformance/: test_public_roms.py
tests/integration/: test_machine_cli.py
tests/roms/: README.md  classic-fx55.ch8  increment-loop.ch8  opcode-smoke.ch8
tests/unit/: test_cfg.py  test_cli.py  test_coverage_gaps.py  test_cpu.py  test_debug.py  test_disasm.py  test_errors.py  test_keyboard.py  test_machine.py  test_memory_display.py  test_opcode.py  test_output_formats.py  test_package.py  test_quirks.py  test_runner.py  test_timers.py  test_tools.py  test_trace.py
