[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chip8-capstone"
version = "2.0.0"
description = "A faithful, testable CHIP-8 emulator with CLI debugging tools"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Princeton Afeez" }]
keywords = ["chip8", "emulator", "retro", "cli", "virtual-machine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-timeout>=2",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
chip8 = "chip8.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chip8 = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Disable the unused asyncio plugin so runs are hermetic; treat our own warnings as errors.
addopts = [
    "--strict-markers",
    "--strict-config",
    "-p", "no:asyncio",
    "--cov=chip8",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "--timeout=30",
]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "RET", "RUF", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]

[tool.coverage.run]
source = ["chip8"]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
